<resources>
    <string name="app_name">UNIVESP</string>
    <string name="user">Usuário</string>

    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="smartphone">Celular</string>
    <string name="telegram">Telegram</string>
    <string name="email">E-Mail</string>

    <string name="Address">Endereço</string>

    <string name="imgProduct">Imagem do Produto</string>

    <string name="description">Descrição</string>

    <string name="iot">IoT</string>
    <string name="newIot">Novo IoT</string>

    <string name="group">Grupo</string>
    <string name="newGroup">Novo Grupo</string>

    <string name="value">Valor</string>

    <string name="logOut">Logout</string>
    <string name="logIn">Login</string>
    <string name="remove">Remover</string>
    <string name="save">Salvar</string>

    <string name="add">Adicionar</string>
    <string name="addUser">Adicionar Usuário</string>

    <string name="edit">Editar</string>
    <string name="upload">Carregar</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="temperature">Temperatura</string>
    <string name="humidity">Umidade</string>
    <string name="noBreak">NoBreak</string>

    <string name="openNav">Abrir</string>
    <string name="closeNav">Fechar</string>
    <string name="userName">nome Usuário</string>
    <string name="isAdmin">Administrador</string>
    <string name="checkPassword">Confirme a Senha</string>
    <string name="imgPath">Selecione a Imagem de Perfil</string>
    <string name="cellphone">Número Celular\n</string>
    <string name="cliente">Cliente</string>
    <string name="client">Cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newUser">Novo Cliente</string>
    <string name="brand">Marca</string>
    <string name="kind">Tipo</string>
    <string name="model">Modelo</string>
    <string name="fuel">Combustível</string>
    <string name="plate">Placa</string>
    <string name="yearOfFabrication">Ano de Fabricação</string>
    <string name="yearOfModel">Ano do Modelo</string>
    <string name="color">Cor</string>
    <string name="car">Carro</string>
    <string name="newCar">Novo Carro</string>
    <string name="id">Identificação</string>
    <string name="date">Data</string>
    <string name="km">KM</string>
    <string name="statusExecution">Estatus Execução</string>
    <string name="statusOrder">Estatus Serviço</string>
    <string name="orders">Serviço</string>
    <string name="newOrder">Novo Orçamento</string>
    <string name="quantity">Quantidade\n</string>
    <string name="addItem">Adicionar Item</string>
    <string name="price">Valor</string>
    <string name="ServiceProfit">Lucro Orçamentos</string>
    <string name="WorkProfit">Lucro Mão de Obra</string>
    <string name="ServiceOpen">Serviços em Aberto</string>
    <string name="ServiceMonth">Serviços Realizados no Mês</string>
    <string name="Total">Total</string>


</resources>