<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/app_name"
            app:showAsAction="withText" />
        <item
            android:id="@+id/navigation_menu_user"
            android:icon="@drawable/ic_group"
            android:title="@string/client"
            app:showAsAction="withText" />
        <item
            android:id="@+id/navigation_menu_car"
            android:icon="@drawable/ic_car"
            android:title="@string/car"
            app:showAsAction="withText" />
        <item
            android:id="@+id/navigation_menu_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders"
            app:showAsAction="withText" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/navigation_menu_logout"
                android:icon="@mipmap/ic_logout"
                android:title="@string/logOut" />
        </menu>
    </item>


</menu>