<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CustomCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
             android:layout_width="match_parent">
            <TextView
                android:id="@+id/textView_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintStart_toEndOf="@+id/textView_name"
                app:layout_constraintTop_toTopOf="@+id/textView_name"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/textView_quantity"
                app:layout_constraintTop_toTopOf="@+id/textView_quantity"
                android:hint="@string/model" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>