<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserMgmtActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/mgmt_menu"
        app:title="@string/client"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.UserForm">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_name"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_name"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_userName"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_userName"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_userName">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_checkPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_password"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_password"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_checkPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkPassword"
                    android:inputType="textVisiblePassword"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_imgPath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_checkPassword"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_checkPassword"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_checkPassword">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_imgPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imgPath"
                    android:inputType="textUri"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_imgPath"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_imgPath"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_imgPath">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_cellphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_email"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_email"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_cellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cellphone"
                    android:inputType="phone"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_telegram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout_cellphone"
                app:layout_constraintStart_toStartOf="@id/textInputLayout_cellphone"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_cellphone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telegram"
                    android:inputType="phone"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>